--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
 
         <activity android:name=".module.home.MainActivity" />
+
+        <activity android:name=".module.homepage.news.NewsReaderActivity" />
     </application>
 
 </manifest>
