--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
         <activity android:name=".module.home.MainActivity" />
 
-        <activity android:name=".module.homepage.news.NewsReaderActivity" />
+        <activity android:name=".module.homepage.news.reader.NewsReaderActivity" />
     </application>
 
 </manifest>
