--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity
-            android:name=".module.splash.SplashActivity">
+        <activity android:name=".module.splash.SplashActivity">
             <intent-filter>
-                <action
-                    android:name="android.intent.action.MAIN" />
-                <category
-                    android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".module.home.MainActivity" />
-        <activity
-            android:name=".module.homepage.news.reader.NewsReaderActivity" />
+
+        <activity android:name=".module.home.MainActivity" />
+
+        <activity android:name=".module.homepage.news.reader.NewsReaderActivity" />
+
+        <activity android:name=".module.home.Login.LoginActivity" />
     </application>
 
 </manifest>
