--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".module.homepage.news.reader.NewsReaderActivity" />
 
         <activity android:name=".module.home.Login.LoginActivity" />
+
+        <activity android:name=".module.homepage.anime.AnimeSearchActivity" />
     </application>
 
 </manifest>
