--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxjava:3.0.4"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'com.github.razerdp:BasePopup:2.2.3'
+    implementation 'com.shuyu:GSYVideoPlayer:7.1.4'
+    implementation 'com.google.android:flexbox:2.0.1'
 }
