--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
         <activity android:name=".module.home.Login.LoginActivity" />
 
         <activity android:name=".module.homepage.anime.AnimeSearchActivity" />
+
+        <activity
+            android:name=".module.homepage.anime.player.AnimePlayerActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
