--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".app.YiZhanApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_logo_192"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -25,7 +26,7 @@
 
         <activity android:name=".module.homepage.news.reader.NewsReaderActivity" />
 
-        <activity android:name=".module.home.Login.LoginActivity" />
+        <activity android:name=".module.home.login.LoginActivity" />
 
         <activity android:name=".module.homepage.anime.AnimeSearchActivity" />
 
@@ -33,6 +34,8 @@
             android:name=".module.homepage.anime.player.AnimePlayerActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:screenOrientation="portrait" />
+
+        <activity android:name=".module.profile.ProfileEditActivity" />
     </application>
 
 </manifest>
